--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                 <li class = "projects">
                         <h2>How much do you know about football</h2>
                     <a href="https://tenzin1010.github.io/soccer-quiz/">
-                        <img src="/image/quiz-app.jpg" id="quiz-screenshot" alt="screenshot quiz app">
+                        <img src="image/quiz-app.jpg" id="quiz-screenshot" alt="screenshot quiz app">
                     </a>
                     <div class="projects-details">
                         <ul>
@@ -96,17 +96,17 @@
             <ul class="social-footer-icons">
                 <li>
                     <a href="https://github.com/Tenzin1010">
-                        <img src="/image/GitHub-Mark-64px.png" alt="github logo">
+                        <img src="image/GitHub-Mark-64px.png" alt="github logo">
                     </a>  
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/tenzinngawang1">
-                        <img src="/image/linkedin-logo-black.png" alt="linkedin logo">
+                        <img src="image/linkedin-logo-black.png" alt="linkedin logo">
                     </a>
                 </li>
                 <li>
                     <a href="tenzin.ngawang0@gmail.com">
-                        <img src="/image/email.png" alt="email logo">
+                        <img src="image/email.png" alt="email logo">
                     </a>
                 </li>
             </ul>
