--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="tenzin.ngawang0@gmail.com">
+                    <a href="mailto:tenzin.ngawang0@gmail.com">
                         <img src="image/email.png" alt="email logo">
                     </a>
                 </li>
