--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                     <img src="image/CSS.3.svg.png" alt="Css logo">
                 </div>
                 <div class="tech-logo">
-                    <img src="image/javascript-logo.png" alt="JS logo">
+                    <img src="image/javascript-logo.PNG" alt="JS logo">
                 </div>
                 <div class="tech-logo">
                     <img src="image/jQuery.png" alt="Jquery logo">
