--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li class = "projects">
                     <h2>A Quiz App testing your Football knowledge</h2>
                     <a href="https://tenzin1010.github.io/soccer-quiz/">
-                        <img src="image/quiz-app.jpg" alt="screenshot quiz app">
+                        <img src="image/quiz-app.JPG" alt="screenshot quiz app">
                     </a>
                     <h3>HTML, CSS, JavaScript, JQuery</h3>
                 </li>
