--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
                 <li class = "projects">
                         <h2>How much do you know about football</h2>
                     <a href="https://tenzin1010.github.io/soccer-quiz/">
-                        <img src="image/quiz-app.JPG" id="quiz-screenshot" alt="screenshot quiz app">
+                        <img src="image/quiz-app.JPG" alt="screenshot quiz app">
                     </a>
                     <div class="projects-details">
                         <ul>
