--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="portfolio-video-clip">
                         <video class="soccer-quiz-video-clip" controls>
-                            <source src="/image/soccer-quiz-clip.mp4" type="video/mp4">
+                            <source src="image/soccer-quiz-clip.mp4" type="video/mp4">
                             Your browser does not support the video tag
                         </video>
                     </div> 
