--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li class = "projects">
                     <h2>A Quiz App testing your Football knowledge</h2>
                     <a href="https://tenzin1010.github.io/soccer-quiz/">
-                        <img src="/image/quiz-app.jpg" alt="screenshot quiz app">
+                        <img src="image/quiz-app.jpg" alt="screenshot quiz app">
                     </a>
                     <h3>HTML, CSS, JavaScript, JQuery</h3>
                 </li>
@@ -69,17 +69,17 @@
             <ul class="social-footer-icons">
                 <li>
                   <a href="https://github.com/Tenzin1010">
-                    <img src="/image/media.png" alt="github logo">
+                    <img src="image/media.png" alt="github logo">
                   </a>  
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/tenzinngawang1">
-                        <img src="/image/linkedin-logo-black.png" alt="linkedin logo">
+                        <img src="image/linkedin-logo-black.png" alt="linkedin logo">
                     </a>
                 </li>
                 <li>
-                    <a href="tenzin.ngawang0@gmail.com">
-                        <img src="/image/email.png" alt="email logo">
+                    <a href="mailto:tenzin.ngawang0@gmail.com">
+                        <img src="image/email.png" alt="email logo">
                     </a>
                 </li>
             </ul>
